# claude-meter

./: .gitignore  README.md  pyproject.toml
docs/: index.html
scripts/: capture-rate-limits.sh  claude-tty-keepalive.sh  com.casterly.claude-meter.plist  com.casterly.claude-tty-keepalive.plist
src/claude_meter/: __init__.py  __main__.py  config.py  counter.py  mac_window.py  pty_session.py  window.py
