[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-meter"
version = "0.1.0"
description = "Live token-usage dashboard for Claude Code, pinned to your external monitor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.scripts]
claude-meter = "claude_meter.window:main"

[tool.setuptools.packages.find]
where = ["src"]
